# word_translator

./: README.md  pyproject.toml
src/word_translator/: applier.py  cli.py  extractor.py  models.py  translator.py
src/word_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
